# discount_prime_agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.claude/: settings.json
.github/workflows/: ci-cd.yml
outputs/: agent_strategy_output.json  campaign_eval.csv  campaigns_clean.csv  lineitems_clean.csv  orders_clean.csv  product_classification.csv  product_metrics.csv  recommendations.csv
src/discount_prime_agent/: __init__.py  main.py  schemas.py
src/discount_prime_agent.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/discount_prime_agent/agents/: __init__.py  orchestrator.py  run.py
src/discount_prime_agent/agents/analytics_agent/: __init__.py  agent.py  tools.py
src/discount_prime_agent/agents/strategy_agent/: __init__.py  agent.py  schema.py
src/discount_prime_agent/mcp/: __init__.py  server.py
src/discount_prime_agent/pipeline/: __init__.py  campaign_eval.py  classify.py  ingest.py  metrics.py  rules.py
tests/: test_analytics_tools.py  test_ingest.py  test_strategy_schema.py
